--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/App/src/",
-            "Auth\\": "src/Auth/src/"
+            "Auth\\": "src/Auth/src/",
+            "Catalog\\": "src/Catalog/src/"
         }
     },
     "autoload-dev": {
