--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,13 @@
     "homepage": "https://github.com/zendframework/zend-expressive-skeleton",
     "license": "BSD-3-Clause",
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "ext-mongo": "1.6.16"
+        }
     },
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^5.6 || ^7.1",
         "http-interop/http-middleware": "^0.4.1",
         "roave/security-advisories": "dev-master",
         "zendframework/zend-authentication": "dev-master",
@@ -26,7 +29,13 @@
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-expressive-fastroute": "^2.0",
         "zendframework/zend-expressive-twigrenderer": "^1.4",
-        "zendframework/zend-expressive-template": "dev-master"
+        "zendframework/zend-expressive-template": "dev-master",
+        "doctrine/doctrine-orm-module": ">=1.0.9",
+        "alcaeus/mongo-php-adapter": ">=1.1.0",
+        "doctrine/mongodb-odm": ">=1.0.9",
+        "doctrine/mongodb": ">=1.3",
+        "doctrine/common": ">=2.1",
+        "dasprid/container-interop-doctrine": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.8 || ^5.7.15",
@@ -38,7 +47,8 @@
         "psr-4": {
             "App\\": "src/App/src/",
             "Auth\\": "src/Auth/src/",
-            "Catalog\\": "src/Catalog/src/"
+            "Catalog\\": "src/Catalog/src/",
+            "Mongo\\": "src/Mongo/src/"
         }
     },
     "autoload-dev": {
