--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
         "doctrine/mongodb-odm": ">=1.0.9",
         "doctrine/doctrine-mongo-odm-module": ">=1.0.0",
         "doctrine/mongodb": ">=1.3",
-        "doctrine/common": ">=2.1",
-        "dasprid/container-interop-doctrine": "dev-master"
+        "doctrine/common": ">=2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.8 || ^5.7.15",
